--- a/app/src/main/res/layout/book_layout.xml
+++ b/app/src/main/res/layout/book_layout.xml
@@ -34,6 +34,12 @@
                 android:layout_weight="1"
                 android:text="TextView" />
             <TextView
+                android:id="@+id/publi"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="TextView"/>
+            <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
