DetailActivity添加返回按钮

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -113,4 +113,10 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <Button
+        android:id="@+id/detail_button"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="返回">
+    </Button>
 </LinearLayout>
